--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "fs": "^0.0.1-security",
-    "ping": "^0.4.4"
+    "ping": "^0.4.4",
+    "prompt-sync": "^4.2.0"
   }
 }
