--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "asciichart": "^1.5.25",
     "chalk": "^4.1.2",
+    "command-line-args": "^5.2.1",
+    "exceljs": "^4.4.0",
     "fs": "^0.0.1-security",
     "ping": "^0.4.4",
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "window-size": "^1.1.1"
   }
 }
