--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "command-line-args": "^5.2.1",
     "exceljs": "^4.4.0",
     "fs": "^0.0.1-security",
+    "network-speed": "^2.1.1",
     "ping": "^0.4.4",
     "prompt-sync": "^4.2.0",
     "window-size": "^1.1.1"
